# tsrs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_PACKAGE_STATUS.md  CROSS_PACKAGE_TEST_RESULTS.md  Cargo.toml  EXTENDED_TEST_SCENARIOS.md  MINIFY_DESIGN.md  README.md  mkdocs.yml
.code/agents/10432/: exec-call_DQ6q50whaT8Gu3huxkrv3mZY.txt
.code/agents/15918/: exec-call_iGmWCQ6d7JFvetWfsAO0ViZJ.txt
.code/agents/16bdd210-3a1e-4027-8d74-25ccb1adbb23/: result.txt
.code/agents/3acf3dcf-9b86-405b-9ac3-7d9c010b55e6/: result.txt
.github/workflows/: static.yml
docs/: AGENTS.md  ALTERNATIVE_APPROACHES.md  API.md  APPLICATIONS.md  CHANGELOG.md  CROSS_PACKAGE_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  MINIFICATION_GUIDE.md  README.md  TESTING.md  TEST_REPOS_SUMMARY.md  TEST_SELECTION_GUIDE.md  TRANSPILE_AI_GUIDE.md
docs/assets/: custom.css
scripts/: bootstrap_wheelhouse.py
site/: 404.html  index.html  sitemap.xml
site/API/: index.html
site/CONTRIBUTING/: index.html
site/MINIFY_DESIGN/: index.html
site/TESTING/: index.html
site/TEST_REPOS_SUMMARY/: index.html
site/search/: search_index.json
src/: callgraph.rs  error.rs  imports.rs  lib.rs  minify.rs  reporting.rs  slim.rs  venv.rs
test_packages/: README.md  wheelhouse.toml
test_packages/test_minify_dependency/dependency_pkg/: pyproject.toml
test_packages/test_minify_dependency/dependency_pkg/minify_dep/: __init__.py
test_repos/: README.md  run_tests.sh
tests/: apply_integration.rs  cli_integration.rs  integration_cross_package.rs  minify_consumer_integration.rs  minify_integration.rs
(+108 files in other folders)
