[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "minify-dep"
version = "0.1.0"
description = "Fixture dependency package for minify-with-consumer tests"
requires-python = ">=3.8"
dependencies = ["minify-core"]

[tool.tsrs.local-dependencies]
"minify-core" = "../core_pkg"
